--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,9 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
+    "desmos": "^1.5.4",
+    "desmos-react": "^1.2.0",
+    "mafs": "^0.18.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
