--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "mafs": "^0.18.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-katex": "^3.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3"
   },
